--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/OpenLayers.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "firebase-auth"
+    }
+  },
+  "defaultProject": "firebase-auth",
+  "cli": {
+    "analytics": "aaca0b9d-ba41-42e9-9c7d-f48229af598d"
+  }
 }
