--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/js/OpenLayers.js"
+              "src/assets/js/OpenLayers.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
