--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.7",
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.7",
+    "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^9.2.4",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
@@ -26,6 +29,7 @@
     "@types/jquery": "^3.3.38",
     "firebase": "^7.14.4",
     "jquery": "^3.5.1",
+    "moment": "^2.27.0",
     "ol": "^6.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
